# ecommerce-etl

./: .gitignore  pyproject.toml
docs/: eda.ipynb
src/: download_ds.py  main.py  spark_config.py
src/etl_pipeline/: bronze.py  gold.py  pipeline.py  silver.py  spark_config.py
tests/: test_etl_pipeline.py  test_iqr.py
