[project]
name = "ecommerce-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.1.8",
    "kagglehub>=1.0.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyspark>=4.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
